--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
+body {
+  background-color: lightgray;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 100%;
+  color: rgb(10, 10, 10);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  text-align: center;
+  padding-top: 15%;
+  padding-bottom: 7%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-family: 'Merriweather', serif;
+  font-size: 5em;  
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+h2{
+  font-family: 'Merriweather', serif;
+  font-size: 3.5em;
+}
+h3 {
+  font-family: 'Merriweather', serif;
+  font-size: 2.0em;
+}
+h4 {
+  font-family: 'Merriweather', serif;
+  font-size: 1.5em;
+}
+nav {
+  background-color: #74959A;
+  
+}
+hr {
+  width: 40%;
+  border-style: solid none none none;
+  border-width: 2px;
+  margin-left: 30%;
+}
+form {
+  margin: auto;
+  width: 80%;
+}
+.row-content {
+  padding-top: 5%;
+  padding-bottom: 2px;
+  color: rgb(10, 10, 10);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.features {
+  margin-top: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.feature-heading {
+  margin-top: 100px;
+}
+.text-heading {
+  font-size: 1.5em;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.icon:hover {
+  transform: scale(1.2) rotate(10deg);
+}
+.medical-img {
+  border-radius: 10%;
+}
+.p-body {
+  margin-top: 50px;
+}
+.btn-style:hover { 
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
